# Separator

./: CMakeLists.txt  README.md  build.sh
input/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
src/: FileIO.cpp  FileIO.h  Parser.cpp  Parser.h  TaskHandler.cpp  TaskHandler.h  main.cpp
